# django_kakeibo

./: README.md  docker-compose.yml  pyproject.toml
application/application/: settings.py
application/kakeibo/: admin.py  forms.py  models.py  urls.py  views.py
application/kakeibo/migrations/: 0001_initial.py
application/kakeibo/templates/kakeibo/: category_form.html  category_list.html  create_done.html  delete_confirm.html  delete_done.html  kakeibo_confirm.html  kakeibo_form.html  kakeibo_list.html  layout.html  show_circle_chart.html  show_linear_chart.html  update_done.html
application/static/kakeibo/js/: functions.js
