[tool.poetry]
name = "kakeibo_app"
version = "0.1.0"
description = ""
authors = ["Naoto Hori <naoto.hori@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
psycopg2 = "^2.8.4"
django-bootstrap-form = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
